# stepper-organ

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  program.sh
include/: notes.hpp  stepper_ctrl.hpp  stepper_pool.hpp
src/: main.cpp  stepper_ctrl.cpp
